# workshop_docker

./: Dockerfile  README.md  pyproject.toml
app/: app.py
